--- a/fontcss.html
+++ b/fontcss.html
@@ -119,6 +119,13 @@ code{
 
 code,pre,samp{font-family: monolisa;}
 
+input[type="range"]{padding: 8px;}
+input[type="range"]:focus{
+    border: 3px solid rgb(60, 177, 249);
+    padding: 5px;
+    border-radius: 99rem;
+}
+
 input#colorPicker {
     appearance: none;
     -moz-appearance: none;
