--- a/sc.html
+++ b/sc.html
@@ -4,6 +4,7 @@
 <meta charset='UTF-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 <link rel='stylesheet' href='https://xolyn.github.io/font.css'>
+
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300,0,0" />
 <title>Document</title>
 <style>
@@ -31,7 +32,7 @@
 </div>
 
 
- <div id="menu" style="border-top: 1px solid #ddd; border-bottom: 1px solid #ddd; background-color: white; width: 100%; height: 4dvh; overflow-x: auto; text-wrap-mode:nowrap;">
+ <div id="menu" style="border-top: 1px solid #ddd; border-bottom: 1px solid #ddd; background-color: white; width: 100%; height: 4dvh; white-space: nowrap;overflow-x: auto;">
     <a href="https://blog.zhoulingyu.net">blog</a>
     <a href="https://portfolio.zhoulingyu.net">portfolio</a>
     <a href="https://drive.zhoulingyu.net">zDrive</a>
