--- a/.bu/index.html
+++ b/.bu/index.html
@@ -14,8 +14,9 @@ h1,h2,h3,h4,h5{font-weight:normal;}
 :root{
     --mainColor:black;
     --subColor:white;
-    --cfont:'sohne';
-    /* --cfont:'courierprime'; */
+    /* --cfont:'sohne'; */
+    --cfont:'sneak';
+    font-feature-settings: "calt", "dlig", "liga", "ss03";
 }
 
 *{
