--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 #index{ font-weight: 400; } 
 #index:hover{ font-weight: 800; }
 
-h1,h2,h3,h4,h5{font-size:larger; font-weight: bold;}
+h1,h2,h3,h4,h5{font-size:larger; font-weight: 600;}
 
 ul{ padding: 0 1em; } 
 
