--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <link rel="stylesheet" href="widgets/hamb.css">
 <title>Lingyu Zhou</title>
 <style>
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap');
 :root{
     --tc:black;
     --bc: white;
@@ -103,7 +104,7 @@ a.noul{text-decoration: none;}
 
 article{ margin: 2.5vh var(--hp);}
 
-article h1{transition: .3s; font-size: large; position: sticky; top:0}
+article h1{transition: .3s; font-size: large; position: sticky; top:0; text-transform: capitalize;}
 
 /* article>h1{ text-decoration: underline; } */
 
