--- a/fontcss.html
+++ b/fontcss.html
@@ -615,8 +615,8 @@ width="15px" height="15px" viewBox="0 0 512 400" version="1.1" xmlns="http://www
         </fieldset>
 
         <fieldset>
-            <legend tag='' >karla</legend>
-            <div style="font-family:karla;" class="usrtxt" contenteditable ></div>
+            <legend tag=''  id="var">Karla</legend>
+            <div style="font-family:Karla;" class="usrtxt" contenteditable ></div>
         </fieldset>
 
         <fieldset>
