--- a/neo.html
+++ b/neo.html
@@ -15,10 +15,10 @@
 }
 
 html{
-    /* font-family: '3x3'; */
+    font-family: '3x3';
 
-    font-family: 'sneak';
-    font-feature-settings: "calt", "dlig", "liga", "ss03";
+    /* font-family: 'sneak';
+    font-feature-settings: "calt", "dlig", "liga", "ss03"; */
     
     font-size: smaller;
     background-color: var(--ac);
@@ -27,7 +27,7 @@ html{
 
 a{color:inherit;}
 
-h2{border-top: .5px solid #ddd; padding: .5rem 0;}
+h2{border-top: .5px solid #ddd; padding: .5rem 0; font-size: medium;}
 
 .wrapper {
   height: 90dvh;
