--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 <link rel="stylesheet" href="widgets/hamb.css">
+<link rel="stylesheet" href="widgets/widgets.css">
+
 <title>Lingyu Zhou</title>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap');
@@ -450,13 +452,29 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 4;
 
 <div needPopulate id="mobMenu" style="width: 100dvw; height: 100dvh; position: fixed; left:0; z-index: 3; background-color: var(--bc); flex-direction: column; transition: .5s ;">
     <div id="mobMenu1" style="margin: auto var(--hp) 0 var(--hp); line-height: 150%; font-size: larger !important; max-height: 80%; overflow-y: auto;"></div>
-    <div style="margin: 1rem var(--hp); letter-spacing: 5px; display: none;">
-        <a style="display: inline-block; font-family:'Bootstrap-icons'; font-size: larger;" class="noul noarr" href="mailto:lz568@cornell.edu">&#xF32C;</a>
-        <a style="display: inline-block; font-family:'Bootstrap-icons'; font-size: larger;" class="noul noarr" href=https://www.linkedin.com/in/lingyuzhou>&#xF472;</a> 
-        <a style="display: inline-block; font-family:'Bootstrap-icons'; font-size: larger;" class="noul noarr" href=https://github.com/xolyn>&#xF3ED;</a> 
-        <a style="display: inline-block; font-family:'Bootstrap-icons'; font-size: larger;" class="noul noarr" href=https://instagram.com/toqurdn>&#xF437;</a> 
-        <a style="display: inline-block; font-family:'Bootstrap-icons'; font-size: larger;" class="noul noarr" href=https://twitter.com/uygniluohz>&#xF8DB;</a> 
-        <a style="display: inline-block; font-family:'Bootstrap-icons'; font-size: larger;" class="noul noarr" href=https://weibo.com/u/5663761733>&#xF8CA;</a>
+    <div style="margin: 1rem var(--hp); letter-spacing: 8px; ">
+        <a style="display: inline-block; font-family:'Bootstrap-icons'; font-size: large;" class="noul noarr" href="mailto:lz568@cornell.edu">&#xF32C;</a>
+        <a style="display: inline-block; font-family:'Bootstrap-icons'; font-size: large;" class="noul noarr" href=https://www.linkedin.com/in/lingyuzhou>&#xF472;</a> 
+        <a style="display: inline-block; font-family:'Bootstrap-icons'; font-size: large;" class="noul noarr" href=https://github.com/xolyn>&#xF3ED;</a> 
+        <a style="display: inline-block; font-family:'Bootstrap-icons'; font-size: large;" class="noul noarr" href=https://instagram.com/toqurdn>&#xF437;</a> 
+        <a style="display: inline-block; font-family:'Bootstrap-icons'; font-size: large;" class="noul noarr" href=https://twitter.com/uygniluohz>&#xF8DB;</a> 
+        <a style="display: inline-block; font-family:'Bootstrap-icons'; font-size: large;" class="noul noarr" href=https://weibo.com/u/5663761733>&#xF8CA;</a>
+    </div>
+
+    <div style="margin: 1rem calc(var(--hp)/2); display: none; background-color: #ddd; padding: 1rem calc(var(--hp)/2); border-radius: .5rem;">
+        <details class="">
+            <summary class="far narrow" style="font-size: medium;">subscribe</summary>
+            <div style="letter-spacing: 10px; margin-top: 1rem;">
+            <a style="display: inline-block; font-family:'Bootstrap-icons'; font-size: larger;" class="noul noarr" href="mailto:lz568@cornell.edu">&#xF32C;</a>
+            <a style="display: inline-block; font-family:'Bootstrap-icons'; font-size: larger;" class="noul noarr" href=https://www.linkedin.com/in/lingyuzhou>&#xF472;</a> 
+            <a style="display: inline-block; font-family:'Bootstrap-icons'; font-size: larger;" class="noul noarr" href=https://github.com/xolyn>&#xF3ED;</a> 
+            <a style="display: inline-block; font-family:'Bootstrap-icons'; font-size: larger;" class="noul noarr" href=https://instagram.com/toqurdn>&#xF437;</a> 
+            <a style="display: inline-block; font-family:'Bootstrap-icons'; font-size: larger;" class="noul noarr" href=https://twitter.com/uygniluohz>&#xF8DB;</a> 
+            <a style="display: inline-block; font-family:'Bootstrap-icons'; font-size: larger;" class="noul noarr" href=https://weibo.com/u/5663761733>&#xF8CA;</a>
+
+            <input type="email" name="" id="" placeholder="Subscribe to my newsletter" style="width: 100%; padding: .5rem; border: none; background-color: transparent; box-sizing: border-box;" required>
+        </div>
+        </details>
     </div>
 
     <div id="alignBottomPlaceholder" style="margin-bottom: 5rem;"></div>
