--- a/proj.html
+++ b/proj.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="https://xolyn.github.io/assets/port.png" type="image/png">
     <link rel="stylesheet" href="https://xolyn.github.io/font.css">
+    <link rel="stylesheet" href="https://xolyn.github.io/widgets/widgets.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>projects</title>
     <style>
@@ -153,7 +154,7 @@
     </style>
 </head>
 <body>
-    <p style="font-size: 2.5rem; font-family: sig;  margin: 5vh 0vh 5vh 5vw;">Projects</p>
+    <p style="font-size: 2.5rem; font-family: martina;  margin: 5vh 0vh 5vh 5vw;">Projects</p>
 
     <div class="proj" >
         <div class="thumbnail">
@@ -222,6 +223,8 @@
         </div>
     </div>
 
+    
+
 
     <div class="proj">
         <div class="thumbnail">
@@ -231,8 +234,8 @@
         </div>
         <div class="desc">
             <p style="font-size: large;">HTML Demo</p>
-            <details open>
-                <summary >List of work</summary>
+            <details open class="line">
+                <summary class="far narrow">List of work</summary>
                 <ul style=" margin-top: 5px;">
                     <li><a href="https://aqmn.github.io/guess">bugs index</a><br></li>
                     <li><a href="me.html">demo0</a><br></li>
