--- a/neo.html
+++ b/neo.html
@@ -4,12 +4,14 @@
 <meta charset='UTF-8'>
 <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 <link rel='stylesheet' href='font.css'>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <title>Document</title>
 <style>
 :root{
   --mc: white;
   --ac: black;
+  --sidebarWidth:40%;
 
   /* cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" ><text fill="white"  x="0" y="20" font-size="20">↑</text></svg>') 0 0, auto; */
 }
@@ -52,6 +54,7 @@ h2{border-top: .5px solid #ddd; padding: .5rem 0; font-size: medium;}
 }
 
 .sidebar {
+  z-index: 9;
   position: sticky;
   top: 0;
   height: min-content;
@@ -78,6 +81,11 @@ menu.onlymob{
   right: -100dvw
 }
 
+/* swiper */
+.prev,.next{cursor: pointer;}
+.prev::selection,.next::selection{background-color: transparent;}
+.prev.swiper-button-disabled,.next.swiper-button-disabled {color: grey; cursor: not-allowed;}
+.swiper-wrapper img{aspect-ratio: 1 / 1;}
 @media (orientation: landscape) {
 .onlymob{
   display: none;
@@ -86,6 +94,21 @@ menu.onlymob{
 .onlyPC{
   display: block;
 }
+
+.sidebar{
+  width: var(--sidebarWidth)
+}
+
+.content{
+  max-width: calc(100% - var(--sidebarWidth));
+}
+
+.swiper{
+  margin-top: 2rem;
+}
+
+.swiper-wrapper img{aspect-ratio: 1.5 / 1;  object-fit: cover;}
+
 }
 
 @media (orientation: portrait) {
@@ -108,6 +131,8 @@ menu.onlymob{
 }
 
 h2{margin: 0; padding-bottom: 0;}
+
+.swiper-wrapper img{aspect-ratio: 1 / 1;  object-fit: cover;}
 }
 
 </style>
@@ -206,6 +231,24 @@ style="margin: auto 1rem; font-weight: 300; cursor:pointer ">&#xe5d2;</div>
       </div .row>
 
       <div class="row">
+        <div class="column sidebar">
+          <h2>Projects</h2>
+      </div>
+      <div class="column content" >
+        <div class="swiper" style="">
+          <div class="swiper-wrapper" style="width: 100%; height: 100%" id="swiper-wrapper">
+          </div>
+        </div>
+
+        <div style="display: flex; width: 100%;">
+          <div class="prev" style="margin-right: 1rem;">&larr;</div>
+          <div class="next">&rarr;</div>
+          <div class="swiper-pagination" style="margin-left: auto; width: fit-content; display: block; position: initial;"></div>
+        </div>
+      </div>
+    </div .row>
+
+      <div class="row">
           <div class="column sidebar">
             <h2>Things I believe</h2>
         </div>
@@ -265,6 +308,8 @@ style="margin: auto 1rem; font-weight: 300; cursor:pointer ">&#xe5d2;</div>
 </div>
 
 
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script src="proj/proj.js"></script>
 </body>
 
 
